# RFSoC-PYNQ-Quantum

./: .gitignore  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: api_reference.md  architecture.md  backends.md
examples/: 01_getting_started.ipynb  02_single_qubit.ipynb  03_multi_qubit.ipynb  04_qick_backend.ipynb  05_qubic_backend.ipynb  06_multi_board.ipynb  07_qiskit_bridge.ipynb
src/pynq_quantum/: __init__.py  circuit.py  cluster.py  collective.py  compiler.py  controller.py  gates.py  overlay.py
src/pynq_quantum/backends/: __init__.py  base.py  generic.py  qick.py  qubic.py  simulation.py
src/pynq_quantum/bridges/: __init__.py  cirq.py  qiskit.py
tests/: conftest.py  test_circuit.py  test_cirq_bridge.py  test_cluster.py  test_collective.py  test_compiler.py  test_controller.py  test_gates.py  test_generic_backend.py  test_qick_backend.py  test_qiskit_bridge.py  test_qubic_backend.py  test_simulation.py
