[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynq-quantum"
version = "0.1.0"
description = "Unified Python API for multi-backend quantum control on Xilinx RFSoC"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "The AI Cowboys", email = "projects@theaicowboys.com"},
]
keywords = ["quantum", "rfsoc", "pynq", "qick", "qubic", "fpga"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
pynq = ["pynq>=3.0"]
qick = ["qick"]
qubic = ["qubic"]
accl = ["pyaccl"]
qiskit = ["qiskit>=1.0"]
cirq = ["cirq-core>=1.3"]
dev = ["pytest>=7.0", "pytest-cov", "pytest-asyncio", "ruff", "mypy"]
all = ["pynq-quantum[pynq,qick,qubic,accl,qiskit,cirq]"]

[project.urls]
Homepage = "https://github.com/The-AI-Cowboys-Projects/RFSoC-PYNQ-Quantum"
Repository = "https://github.com/The-AI-Cowboys-Projects/RFSoC-PYNQ-Quantum"
Issues = "https://github.com/The-AI-Cowboys-Projects/RFSoC-PYNQ-Quantum/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
